# clipboard-copy-aware

./: .gitattributes  Cargo.toml  browser.js  clipboard-copy-aware.wasi-browser.js  clipboard-copy-aware.wasi.cjs  index.d.ts  index.js  package-lock.json  package.json  pnpm-lock.yaml  test.js
.github/workflows/: CI.yml
__test__/: child.js  index.html  index.js  preload.js
src/: analysis.rs  global.rs  hooks.rs  lib.rs  utils.rs
